--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
       border-radius: 10px;
       z-index: 10;
     }
-    #flashToggle {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 6px 10px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      z-index: 10;
+    #ui button {
+      margin-top: 6px;
+      width: 100%;
+      padding: 6px;
+      font-size: 14px;
     }
     .label {
       position: absolute;
@@ -44,66 +38,97 @@
     <label>Size Multiplier: <input type="number" id="sizeMultiplier" value="3" step="0.1" /></label><br />
     <label>Azimuths (comma-separated deg): <input type="text" id="azimuths" value="0,45,90,135,180,225,270,315" /></label><br />
     <label>Elevations (comma-separated deg): <input type="text" id="elevations" value="30,45,60" /></label><br />
-    <button onclick="generateDome()">Generate Dome</button>
+    <button id="generateBtn">Generate Dome</button>
+    <button id="flashBtn" disabled>Flash OFF</button>
   </div>
-  <div id="flashToggle" onclick="toggleFlash()">Flash OFF</div>
 
   <script type="module">
     import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
     import { ARButton } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/webxr/ARButton.js';
     import { DragControls } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/controls/DragControls.js';
 
-    let camera, scene, renderer;
-    let controller;
+    let camera, scene, renderer, controller;
     let domeGroup = null;
     let raycaster = new THREE.Raycaster();
     let pointer = new THREE.Vector2();
-    let flashOn = false;
-    let videoTrack = null;
+    let torchTrack = null;
+    let torchOn = false;
 
     init();
 
-    function init() {
+    async function init() {
+      // 씬, 카메라, 렌더러 설정
       scene = new THREE.Scene();
       camera = new THREE.PerspectiveCamera();
-
       renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
       renderer.xr.enabled = true;
       document.body.appendChild(renderer.domElement);
+
+      // AR 버튼 생성 (한 번만)
       document.body.appendChild(ARButton.createButton(renderer));
 
+      // 컨트롤러
       controller = renderer.xr.getController(0);
       scene.add(controller);
 
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } }).then(stream => {
-        videoTrack = stream.getVideoTracks()[0];
-      });
-
+      // 마커 터치 감지
       window.addEventListener('click', onDocumentClick);
 
+      // Generate 버튼 이벤트
+      document.getElementById('generateBtn').addEventListener('click', generateDome);
+
+      // 플래시 토글 준비
+      setupTorch();
+
+      // 렌더 루프
       renderer.setAnimationLoop(() => {
         renderer.render(scene, camera);
       });
     }
 
-    function toggleFlash() {
-      if (!videoTrack) return;
-      const capabilities = videoTrack.getCapabilities();
-      if (!capabilities.torch) {
-        alert("Flashlight not supported on this device.");
-        return;
+    // Torch(플래시) 세팅
+    async function setupTorch() {
+      const flashBtn = document.getElementById('flashBtn');
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: { exact: 'environment' } }
+        });
+        const track = stream.getVideoTracks()[0];
+        const caps = track.getCapabilities();
+        if (caps.torch) {
+          torchTrack = track;
+          flashBtn.disabled = false;
+          flashBtn.textContent = 'Flash OFF';
+          flashBtn.addEventListener('click', toggleFlash);
+        } else {
+          flashBtn.textContent = 'No Torch';
+        }
+      } catch (e) {
+        console.warn('Torch not available', e);
+        flashBtn.textContent = 'No Torch';
       }
-      flashOn = !flashOn;
-      videoTrack.applyConstraints({ advanced: [{ torch: flashOn }] });
-      document.getElementById("flashToggle").textContent = flashOn ? "Flash ON" : "Flash OFF";
     }
 
+    // 플래시 켜기/끄기
+    function toggleFlash() {
+      if (!torchTrack) return;
+      torchOn = !torchOn;
+      torchTrack.applyConstraints({ advanced: [{ torch: torchOn }] })
+        .then(() => {
+          document.getElementById('flashBtn').textContent = torchOn ? 'Flash ON' : 'Flash OFF';
+        })
+        .catch(err => {
+          console.error('Torch toggle error', err);
+          alert('Flash toggle failed');
+        });
+    }
+
+    // 마커 클릭 시 라벨 표시
     function onDocumentClick(event) {
       pointer.x = (event.clientX / window.innerWidth) * 2 - 1;
       pointer.y = -(event.clientY / window.innerHeight) * 2 + 1;
       raycaster.setFromCamera(pointer, camera);
-
       const intersects = raycaster.intersectObjects(scene.children, true);
       if (intersects.length > 0) {
         const object = intersects[0].object;
@@ -113,48 +138,55 @@
       }
     }
 
-    window.generateDome = function () {
-      const targetSize = parseFloat(document.getElementById("targetSize").value);
-      const multiplier = parseFloat(document.getElementById("sizeMultiplier").value);
-      const azimuths = document.getElementById("azimuths").value.split(',').map(s => parseFloat(s.trim())).filter(n => !isNaN(n));
-      const elevations = document.getElementById("elevations").value.split(',').map(s => parseFloat(s.trim())).filter(n => !isNaN(n));
+    // 돔 생성
+    function generateDome() {
+      const targetSize = parseFloat(document.getElementById('targetSize').value);
+      const multiplier = parseFloat(document.getElementById('sizeMultiplier').value);
+      const azimuths = document.getElementById('azimuths').value
+        .split(',').map(s => parseFloat(s.trim())).filter(n => !isNaN(n));
+      const elevations = document.getElementById('elevations').value
+        .split(',').map(s => parseFloat(s.trim())).filter(n => !isNaN(n));
 
       const radius = (targetSize / 1000) * multiplier;
 
+      // 기존 돔 제거
       if (domeGroup) scene.remove(domeGroup);
       domeGroup = new THREE.Group();
 
-      const outerGeometry = new THREE.SphereGeometry(radius, 32, 16, 0, Math.PI * 2, 0, Math.PI / 2);
-      const innerGeometry = new THREE.SphereGeometry(radius - 0.01, 32, 16, 0, Math.PI * 2, 0, Math.PI / 2);
-      const domeMaterial = new THREE.MeshStandardMaterial({ color: 0x000000, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
-      domeGroup.add(new THREE.Mesh(outerGeometry, domeMaterial));
-      domeGroup.add(new THREE.Mesh(innerGeometry, domeMaterial));
+      // 반투명 두께 있는 돔
+      const outerGeo = new THREE.SphereGeometry(radius, 32, 16, 0, Math.PI * 2, 0, Math.PI / 2);
+      const innerGeo = new THREE.SphereGeometry(radius - 0.01, 32, 16, 0, Math.PI * 2, 0, Math.PI / 2);
+      const domeMat = new THREE.MeshStandardMaterial({
+        color: 0x000000, transparent: true, opacity: 0.3, side: THREE.DoubleSide
+      });
+      domeGroup.add(new THREE.Mesh(outerGeo, domeMat));
+      domeGroup.add(new THREE.Mesh(innerGeo, domeMat));
 
-      const markerGeometry = new THREE.SphereGeometry(0.03, 16, 16);
-      const markerMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-
-      azimuths.forEach(azimuth => {
-        elevations.forEach(elevation => {
-          const theta = THREE.MathUtils.degToRad(azimuth);
-          const phi = THREE.MathUtils.degToRad(elevation);
+      // 마커 생성
+      const markerGeo = new THREE.SphereGeometry(0.03, 16, 16);
+      const markerMat = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+      azimuths.forEach(az => {
+        elevations.forEach(el => {
+          const theta = THREE.MathUtils.degToRad(az);
+          const phi = THREE.MathUtils.degToRad(el);
           const x = radius * Math.cos(phi) * Math.sin(theta);
           const y = radius * Math.sin(phi);
           const z = radius * Math.cos(phi) * Math.cos(theta);
-
-          const marker = new THREE.Mesh(markerGeometry, markerMaterial);
+          const marker = new THREE.Mesh(markerGeo, markerMat);
           marker.position.set(x, y, z);
-          marker.userData.label = `${azimuth}° / ${elevation}°`;
+          marker.userData.label = `${az}° / ${el}°`;
           domeGroup.add(marker);
         });
       });
 
-      const direction = new THREE.Vector3(0, 0, -1).applyQuaternion(camera.quaternion);
-      domeGroup.position.copy(camera.position).add(direction.multiplyScalar(0.5));
-
+      // 카메라 앞 0.5m 위치
+      const dir = new THREE.Vector3(0, 0, -1).applyQuaternion(camera.quaternion);
+      domeGroup.position.copy(camera.position).add(dir.multiplyScalar(0.5));
       scene.add(domeGroup);
 
-      const dragControls = new DragControls([domeGroup], camera, renderer.domElement);
-    };
+      // 드래그로 위치 조정
+      new DragControls([domeGroup], camera, renderer.domElement);
+    }
   </script>
 </body>
 </html>
