--- a/index.html
+++ b/index.html
@@ -3,44 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebXR AR Dome</title>
+  <title>WebXR AR Dome v2</title>
   <style>
-    body { margin: 0; overflow: hidden; font-family: sans-serif; }
-    #ui {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 10px;
-      border-radius: 10px;
-      z-index: 10;
+    body { margin:0; overflow:hidden; font-family: sans-serif; }
+    #ui, #flashBtn {
+      position: absolute; z-index: 10; background: rgba(255,255,255,0.9); padding:10px; border-radius:8px;
     }
-    #ui button {
-      margin-top: 6px;
-      width: 100%;
-      padding: 6px;
-      font-size: 14px;
-    }
-    .label {
-      position: absolute;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 2px 4px;
-      border-radius: 4px;
-      font-size: 12px;
-      display: none;
-    }
+    #ui { top:10px; left:10px; }
+    #flashBtn { top:10px; right:10px; cursor: pointer; }
+    button { display:block; width:100%; margin-top:8px; }
+    .ar-button { position: absolute !important; bottom: 20px !important; left: calc(50% - 50px) !important; }
   </style>
 </head>
 <body>
   <div id="ui">
-    <label>Target Size (mm): <input type="number" id="targetSize" value="100" /></label><br />
-    <label>Size Multiplier: <input type="number" id="sizeMultiplier" value="3" step="0.1" /></label><br />
-    <label>Azimuths (comma-separated deg): <input type="text" id="azimuths" value="0,45,90,135,180,225,270,315" /></label><br />
-    <label>Elevations (comma-separated deg): <input type="text" id="elevations" value="30,45,60" /></label><br />
-    <button id="generateBtn">Generate Dome</button>
-    <button id="flashBtn" disabled>Flash OFF</button>
+    <label>Target Size (mm): <input type="number" id="targetSize" value="100" /></label><br/>
+    <label>Multiplier: <input type="number" id="sizeMultiplier" value="3" step="0.1"/></label><br/>
+    <label>Azimuths (deg): <input type="text" id="azimuths" value="0,45,90,135,180,225,270,315"/></label><br/>
+    <label>Elevations (deg): <input type="text" id="elevations" value="30,45,60"/></label><br/>
+    <button id="genBtn">Generate Dome</button>
   </div>
+  <button id="flashBtn">Flash OFF</button>
 
   <script type="module">
     import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
@@ -51,140 +34,105 @@
     let domeGroup = null;
     let raycaster = new THREE.Raycaster();
     let pointer = new THREE.Vector2();
-    let torchTrack = null;
-    let torchOn = false;
+    let videoTrack = null, torchOn = false;
+    const ui = document.getElementById('ui');
+    const flashBtn = document.getElementById('flashBtn');
 
     init();
 
-    async function init() {
-      // 씬, 카메라, 렌더러 설정
+    function init() {
       scene = new THREE.Scene();
       camera = new THREE.PerspectiveCamera();
-      renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+      renderer = new THREE.WebGLRenderer({ antialias:true, alpha:true });
       renderer.setSize(window.innerWidth, window.innerHeight);
       renderer.xr.enabled = true;
       document.body.appendChild(renderer.domElement);
 
-      // AR 버튼 생성 (한 번만)
-      document.body.appendChild(ARButton.createButton(renderer));
+      // ARButton with hit-test for AR session
+      const arButton = ARButton.createButton(renderer, { requiredFeatures: ['hit-test'] });
+      arButton.classList.add('ar-button');
+      document.body.appendChild(arButton);
 
-      // 컨트롤러
+      // Controller for future use
       controller = renderer.xr.getController(0);
       scene.add(controller);
 
-      // 마커 터치 감지
-      window.addEventListener('click', onDocumentClick);
+      window.addEventListener('click', onClick);
+      document.getElementById('genBtn').addEventListener('click', generateDome);
 
-      // Generate 버튼 이벤트
-      document.getElementById('generateBtn').addEventListener('click', generateDome);
-
-      // 플래시 토글 준비
       setupTorch();
 
-      // 렌더 루프
       renderer.setAnimationLoop(() => {
         renderer.render(scene, camera);
       });
     }
 
-    // Torch(플래시) 세팅
     async function setupTorch() {
-      const flashBtn = document.getElementById('flashBtn');
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode: { exact: 'environment' } }
-        });
-        const track = stream.getVideoTracks()[0];
+        const stream = await navigator.mediaDevices.getUserMedia({ video:{ facingMode:'environment' }});
+        const [track] = stream.getVideoTracks();
         const caps = track.getCapabilities();
         if (caps.torch) {
-          torchTrack = track;
+          videoTrack = track;
           flashBtn.disabled = false;
-          flashBtn.textContent = 'Flash OFF';
           flashBtn.addEventListener('click', toggleFlash);
         } else {
           flashBtn.textContent = 'No Torch';
         }
-      } catch (e) {
-        console.warn('Torch not available', e);
+      } catch(err) {
         flashBtn.textContent = 'No Torch';
       }
     }
 
-    // 플래시 켜기/끄기
-    function toggleFlash() {
-      if (!torchTrack) return;
+    function toggleFlash(){
+      if (!videoTrack) return;
       torchOn = !torchOn;
-      torchTrack.applyConstraints({ advanced: [{ torch: torchOn }] })
-        .then(() => {
-          document.getElementById('flashBtn').textContent = torchOn ? 'Flash ON' : 'Flash OFF';
-        })
-        .catch(err => {
-          console.error('Torch toggle error', err);
-          alert('Flash toggle failed');
-        });
+      videoTrack.applyConstraints({ advanced:[{ torch: torchOn }] })
+        .then(() => flashBtn.textContent = torchOn? 'Flash ON':'Flash OFF')
+        .catch(()=> flashBtn.textContent='Error');
     }
 
-    // 마커 클릭 시 라벨 표시
-    function onDocumentClick(event) {
-      pointer.x = (event.clientX / window.innerWidth) * 2 - 1;
-      pointer.y = -(event.clientY / window.innerHeight) * 2 + 1;
+    function onClick(e){
+      pointer.x = (e.clientX/window.innerWidth)*2-1;
+      pointer.y = -(e.clientY/window.innerHeight)*2+1;
       raycaster.setFromCamera(pointer, camera);
-      const intersects = raycaster.intersectObjects(scene.children, true);
-      if (intersects.length > 0) {
-        const object = intersects[0].object;
-        if (object.userData.label) {
-          alert(object.userData.label);
-        }
+      const hits = raycaster.intersectObjects(scene.children,true);
+      if (hits.length>0 && hits[0].object.userData.label) {
+        alert(hits[0].object.userData.label);
       }
     }
 
-    // 돔 생성
-    function generateDome() {
-      const targetSize = parseFloat(document.getElementById('targetSize').value);
-      const multiplier = parseFloat(document.getElementById('sizeMultiplier').value);
-      const azimuths = document.getElementById('azimuths').value
-        .split(',').map(s => parseFloat(s.trim())).filter(n => !isNaN(n));
-      const elevations = document.getElementById('elevations').value
-        .split(',').map(s => parseFloat(s.trim())).filter(n => !isNaN(n));
-
-      const radius = (targetSize / 1000) * multiplier;
-
-      // 기존 돔 제거
+    function generateDome(){
+      const ts = parseFloat(document.getElementById('targetSize').value);
+      const mul = parseFloat(document.getElementById('sizeMultiplier').value);
+      const azs = document.getElementById('azimuths').value.split(',').map(n=>parseFloat(n));
+      const els = document.getElementById('elevations').value.split(',').map(n=>parseFloat(n));
+      const radius = (ts/1000)*mul;
       if (domeGroup) scene.remove(domeGroup);
       domeGroup = new THREE.Group();
 
-      // 반투명 두께 있는 돔
-      const outerGeo = new THREE.SphereGeometry(radius, 32, 16, 0, Math.PI * 2, 0, Math.PI / 2);
-      const innerGeo = new THREE.SphereGeometry(radius - 0.01, 32, 16, 0, Math.PI * 2, 0, Math.PI / 2);
-      const domeMat = new THREE.MeshStandardMaterial({
-        color: 0x000000, transparent: true, opacity: 0.3, side: THREE.DoubleSide
-      });
-      domeGroup.add(new THREE.Mesh(outerGeo, domeMat));
-      domeGroup.add(new THREE.Mesh(innerGeo, domeMat));
+      const mat = new THREE.MeshStandardMaterial({color:0x000000,transparent:true,opacity:0.3,side:THREE.DoubleSide});
+      domeGroup.add(new THREE.Mesh(new THREE.SphereGeometry(radius,32,16,0,Math.PI*2,0,Math.PI/2), mat));
+      domeGroup.add(new THREE.Mesh(new THREE.SphereGeometry(radius-0.01,32,16,0,Math.PI*2,0,Math.PI/2), mat));
 
-      // 마커 생성
-      const markerGeo = new THREE.SphereGeometry(0.03, 16, 16);
-      const markerMat = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-      azimuths.forEach(az => {
-        elevations.forEach(el => {
-          const theta = THREE.MathUtils.degToRad(az);
-          const phi = THREE.MathUtils.degToRad(el);
-          const x = radius * Math.cos(phi) * Math.sin(theta);
-          const y = radius * Math.sin(phi);
-          const z = radius * Math.cos(phi) * Math.cos(theta);
-          const marker = new THREE.Mesh(markerGeo, markerMat);
-          marker.position.set(x, y, z);
-          marker.userData.label = `${az}° / ${el}°`;
-          domeGroup.add(marker);
-        });
-      });
+      const geo = new THREE.SphereGeometry(0.03,16,16);
+      const mat2 = new THREE.MeshBasicMaterial({color:0xff0000});
+      azs.forEach(az=> els.forEach(el=>{
+        const theta = THREE.MathUtils.degToRad(az);
+        const phi = THREE.MathUtils.degToRad(el);
+        const x = radius*Math.cos(phi)*Math.sin(theta);
+        const y = radius*Math.sin(phi);
+        const z = radius*Math.cos(phi)*Math.cos(theta);
+        const m = new THREE.Mesh(geo,mat2);
+        m.position.set(x,y,z);
+        m.userData.label = `${az}° / ${el}°`;
+        domeGroup.add(m);
+      }));
 
-      // 카메라 앞 0.5m 위치
-      const dir = new THREE.Vector3(0, 0, -1).applyQuaternion(camera.quaternion);
+      // Place 0.5m in front
+      const dir = new THREE.Vector3(0,0,-1).applyQuaternion(camera.quaternion);
       domeGroup.position.copy(camera.position).add(dir.multiplyScalar(0.5));
       scene.add(domeGroup);
-
-      // 드래그로 위치 조정
       new DragControls([domeGroup], camera, renderer.domElement);
     }
   </script>
